--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13206431.md#1" title="【时事纵横】阿里捐千亿求生 欧盟狠踩中共红线""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206485-1200x800-1--320x200.jpg">&nbsp;</a>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13207188.md#1" title="菅义伟表示不竞选自民党总裁 日相将换人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12982617-GettyImages-1233150593-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/enszgt341/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://enszgt341.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/4/n13209356.md#1">【翻墙必看】胡锡进唱反调的背后</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209216.md#1">英国让12-15岁孩子接种疫苗 专家组反对</a><br>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/4/n13209582.md#1">组图四：第九届中国古典舞初赛青年男子组风采</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/4/n13209612.md#1">《罢免纽森》一书摘录： 加州最残酷的AB5法案（上）</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13207565.md#1">组图：美军撤离阿富汗 留下哪些武器装备</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/4/n13209533.md#1">组图三：第九届中国古典舞初赛青年女子组风采</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209273.md#1">工作室微博被禁言至今 赵丽颖9月行程成谜</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/4/n13209356.md#1">【翻墙必看】胡锡进唱反调的背后</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209216.md#1">英国让12-15岁孩子接种疫苗 专家组反对</a><br>
+:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/4/n13209582.md#1">组图四：第九届中国古典舞初赛青年男子组风采</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/4/n13209612.md#1">《罢免纽森》一书摘录： 加州最残酷的AB5法案（上）</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13207565.md#1">组图：美军撤离阿富汗 留下哪些武器装备</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13206414.md#1">北大经济学教授罕见警告：走向“共同贫穷”</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13206095.md#1">驳“深刻变革正进行” 胡锡进和官媒唱反调</a><br>
@@ -26,10 +26,10 @@
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13204642.md#1">大陆猪肉价格大跌 当局喊话民众多吃猪肉惹议</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13204286.md#1">浙江杭州副市长王宏被免职</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13204307.md#1">湖南养老机构爆雷 近二千老人痛失近亿养老钱</a><br>
-<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/1/n13203728.md#1">【一线采访】河南卫辉商户曝洪灾背后黑幕</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13206846.md#1">【翻墙必看】胡锡进挑战官媒 网民：谁和谁斗？</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13205961.md#1">党要给你打分 中共正悄悄接管全民数据</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13203997.md#1">【内幕】当局清洗政法委 文件泄辽宁敷衍了事</a><br>
+<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/2/n13204937.md#1">专家：新一轮经济竞赛 美中企业实力拉大差距</a><br>
 <br><p align="center"><a href="https://github.com/enszgt341/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13207465.md#1">王赫：韩国研发战术核武器级导弹 暗敲中共</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/1/n13203707.md#1">北京中产讲述心酸购房史：承德买房一场空</a><br>
@@ -40,17 +40,18 @@
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/1/n13203646.md#1">【有冇搞错】中国周边紧张 冲突一触即发</a><br>
 <br><p align="center"><a href="https://github.com/enszgt341/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13207021.md#1">赵薇“幕后总指挥”曝光？</a><br>
-<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209030.md#1">中国逾16万补教机构倒闭 冲击教育市场</a><br>
+<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209154.md#1">【远见快评】胡锡进唱反调 中纪委：有人想夺权</a><br>
+<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13208631.md#1">西安地铁保安拖拽女子事件新进展 再引爆舆论</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209172.md#1">【秦鹏直播】菅义伟下台 “奥运魔咒”又发威？</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13208129.md#1">【新闻大家谈】中共埋“水雷”或引火烧身</a><br>
+<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209030.md#1">中国逾16万补教机构倒闭 冲击教育市场</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13208638.md#1">分析：胡锡进反驳李光满背后的四个秘密</a><br>
-<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209154.md#1">【远见快评】胡锡进唱反调 中纪委：有人想夺权</a><br>
-<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13208132.md#1">【拍案惊奇】胡锡进否定新文革 与习唱对台戏？</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/8/24/n13183383.md#1">【独家】陕西“千人计划”名单曝光</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13207758.md#1">中共将设北京证交所 专家分析：难以成功</a><br>
+<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13208132.md#1">【拍案惊奇】胡锡进否定新文革 与习唱对台戏？</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/4/n13209356.md#1">【翻墙必看】胡锡进唱反调的背后</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13208618.md#1">传北京政府提议国企入股滴滴 控制用户数据</a><br>
-<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13208631.md#1">西安地铁保安拖拽女子事件新进展 再引爆舆论</a><br>
+<a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209273.md#1">工作室微博被禁言至今 赵丽颖9月行程成谜</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209130.md#1">【新闻看点】菅义伟担责将离任 大陆穷孩入学难</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13209059.md#1">赵薇遭封杀 林心如一动作获赞“有先见之明”</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/3/n13208754.md#1">【财商天下】多国央行“收水” 中国反其道而行</a><br>
@@ -98,14 +99,13 @@
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/8/30/n13198271.md#1">赵薇出事 牵连旗下艺人遭封杀</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/8/30/n13198576.md#1">【秦鹏直播】美遣返3中国留学生 中共党媒发奇文</a><br>
 <a href="https://github.com/enszgt341/djy/blob/master/gb/21/8/30/n13198059.md#1">【时事纵横】大谈“主动退休” 大外宣逼宫？</a><br>
-<a href="https://github.com/enszgt341/djy/blob/master/gb/21/8/30/n13198557.md#1">【远见快评】娱乐圈风暴 赵薇发文报平安被删除</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://118.165.194.117/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,277</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.224.157.162/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,277</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 382,994,374 人
+!共 382,995,763 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208890.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13203386-GettyImages-1234125584-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208890.md#1">克里访华 美中未能就气候问题达协议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13205815.md#1">江西女麻醉师张松遭警察绑架 下落不明</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208092.md#1">新浪微博处置52个账号 网民批：文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13201150.md#1">不当中共殉葬品 广东男子退出共青团</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202734.md#1">维稳还是整人？北京访民冯丽志被丢到青海</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13199374.md#1">【独家】面对法轮功 610主任自曝信心不足</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208492.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205700-d8fbf5c8edc44051976d00d8c15bde56-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208492.md#1">恒大集团被至少两家信托公司讨债 股债双跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207893.md#1">谢金河警告：投资中国 小心中共未来政策走向</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208288.md#1">习“共同富裕”政策 许胜雄：经济控制渐强</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207731.md#1">A股震荡收跌 沪深两市成交破1.5万亿元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207065.md#1">穆迪将中国房地产行业展望下调为负面</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206642.md#1">中诚信下调恒大地产主体及债项信用等级至AA</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208571.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13208622-GettyImages-1159739946-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208571.md#1">拒中企介入 美资助太平洋海底光缆建设</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208683.md#1">菅义伟将辞职 候选人之一强调加强日台关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208170.md#1">和北京关系持续恶化 立陶宛召回驻华大使</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207643.md#1">自由多元远胜孔子学院 台湾华语中心在美揭幕</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13206611.md#1">何良懋：中共籍整顿影视界 隔绝西方影响</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207190.md#1">日本宣布赠台第四批AZ疫苗 台湾：诚挚感谢</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207779.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13208083-1-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207779.md#1">中共强迫打新冠疫苗 民众激烈反弹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207591.md#1">重庆市民打疫苗后死亡 家属遭当局噤声</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204876.md#1">太原江阳化工厂发生爆炸 附近房屋玻璃震碎</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202532.md#1">湖北黄石面包车撞上重型货车 致4死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13202378.md#1">湖南市民拒绝打疫苗 被警方强押到医院接种</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13201698.md#1">云南一辆轿车突然起火 两幼儿不幸遇难</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208868.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/09/id13209021-xie-tingfeng-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13208868.md#1">为何近年只当厨师不拍电影？谢霆锋感伤回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207138.md#1">高晓松脱口秀被下架 又一阿里系名人陷麻烦</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/3/n13207013.md#1">【前线采访】大陆网红李子柒火红后 衍生的利益</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204852.md#1">习称风险挑战多 学者：再喊斗争显示形势严峻</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/2/n13204656.md#1">大陆开学日 网民调侃：学校围墙“长满家长”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/9/1/n13203664.md#1">黑龙江高校6名学生干部查寝耍官威 引热议</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/08/id13180002-GettyImages-1234304748@1200x1200-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/31/n13200988.md#1">中共“双减”政策惹议 学者：违反教育规律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/30/n13198040.md#1">习近平要求防范民族风险 分析：中共要控制所有人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194436.md#1">【财商天下】英语下架 文革2.0</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/28/n13194291.md#1">中共禁民办学校 学者：控制思想 掠夺财富</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/24/n13185119.md#1">约翰霍普金斯大学修改规定 不认可中国疫苗</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/8/20/n13177079.md#1">拍《尚气》与梁朝伟合作 刘思慕直呼美梦成真</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/enszgt341/djy/blob/master/gb/21/9/1/n13203539.md#1">【独家】习思想进课堂 大学生首当其冲</a><br>
