--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,6 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244844.md#1" target="_blank">【疫情9.19】纽约数千人集会抗议疫苗护照</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244844.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244955-FreedomRally-1200x900-320x200.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周日（9月19日）上午8:21，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过2.28亿（228,277.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 7:19 PM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244806.md#1" target="_blank">“唤醒人回归神” 神韵休斯顿两场大爆满</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244806.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244958-210918192241100719-150x120.jpg" align ="left"></a>2021年9月18日下午和晚上，休斯顿沃瑟姆剧院（HOUSTON Wortham Center Brown Theater）迎来了今年在当地的首日两场演出。
 当天演出却盛况空前，两场演出皆大爆满, 晚场一票难求, 加座都供不应求。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 7:06 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241909.md#1" target="_blank">在Costco买食品 八种最实惠 五种不合算</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13241909.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/05/id12983256-GettyImages-756618-150x120.jpg" align ="left"></a>美国仓储式连锁店Costco（好市多）售卖很多受欢迎的食品，吸引大量消费者。大多数消费者一般最多一周去一次Costco购物，且Costco出售的多是大包装商品，食品也不例外。从经济实惠的角度考虑，哪些食品在Costco买合算，哪些不实惠呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:30 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243925.md#1" target="_blank">核潜艇威慑力大 攻击型和弹道导弹型有何区别</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243925.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/50517609786_370824c32a_o-150x120.jpg" align ="left"></a>随着澳大利亚与美国和英国达成协议，开始一项核动力潜艇计划，核潜艇话题开始成为热点。那么核潜艇是如何运作的，两种类型的核潜艇又有何区别呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 6:00 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank">分享中国文化 纽约新世纪中秋游园日受褒奖</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244498.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244507-image00015-150x120.jpeg" align ="left"></a>9月18日，位于纽约上州橙县鹿苑镇（the town of Deerpark，Orange County）的新世纪公司（the New Century）举办了今年的中秋游庆祝活动，受到了当地居民的热情欢迎，逾千人参加了本次游园活动。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 2:56 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank">恒大受害人患病求兑付被拒 维权遭警传唤</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/19/n13244483.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13244490-GettyImages-1235284069-150x120.jpg" align ="left"></a>恒大集团旗下的“恒大财富”理财产品逾期未兑付，18日凌晨，恒大集团发布公告称，截至今年5月1日，有六名高管提前赎回12笔投资产品，引发不满。有受害人告诉大纪元，她罹癌开刀急需医药费，却被拒绝提前兑付，现在只能靠卡债度日。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 11:40 AM							</td></tr>
@@ -11,7 +12,7 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242771.md#1" target="_blank">【独家】文件泄河南迫害法轮功的轨迹</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242771.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13094510-9ED1714-150x120.jpg" align ="left"></a>近日，大纪元获得中共河南当局近10年来有关迫害法轮功的内部文件。文件显示，河南省商丘市从乡村（街道、社区）到学校、政府等部门全方位打压法轮功，并制定一系列措施实施迫害，非法抓捕法轮功学员。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 4:38 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13242358.md#1" target="_blank">宋紫凤：疫情中的这一家 剧本外的你我他</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13242358.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13242381-Poster-2-150x120.png" align ="left"></a>《疫情中的一家人》，当我从朋友那里听说这部由加拿大新境界影视公司出品的新片时，我望文生义地以为那会是一个关于生离死别的悲伤故事吧。但是，当我坐到屏幕前，随着镜头走进那一家人时，却发现一切与我的预设完全不同。在这个浮躁的，以强烈的视听冲击来吸引眼球的世界里，一部影片竟然这样平静从容地、润物无声地走入你的心中，以至于那娓娓道来的全然不似故事，而就是真实的生活、熟.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 11:12 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243777.md#1" target="_blank">前世银主管调高中国排名 美共和党吁调查</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243777.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/106f75de9aeb548e00462a5051ace70f-150x120.jpg" align ="left"></a>调查发现，国际货币基金组织（IMF）总裁克里斯塔琳娜?格奥尔基耶娃（Kristalina Georgieva）在担任世界银行首席执行官时曾向下属施压，以调高中国营商环境排名。周五（9月17日），美国国会多名共和党议员对格奥尔基耶娃的不当做法表示谴责，并要求问责。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 9:37 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243381.md#1" target="_blank">中国留学生在联合国前维权 诉中共警察性侵</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243381.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13243499-zxnFotoJet-150x120.jpg" align ="left"></a>9月14日，第76届联合国大会在纽约联合国总部开幕。当天，刚来美国不久的中国留学生张晓宁在会场外举牌维权，控诉在北京被关精神病院，要求严惩对她实施性侵的北京恶警。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 9:12 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243381.md#1" target="_blank">中国留学生在联合国前维权 诉中共警察性侵</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243381.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13243499-zxnFotoJet-150x120.jpg" align ="left"></a>9月14日，第76届联合国大会在纽约联合国总部开幕。当天，刚来美国不久的中国留学生张小宁在会场外举牌维权，控诉在北京被关精神病院，要求严惩对她实施性侵的北京恶警。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 9:12 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243430.md#1" target="_blank">福建Delta疫情传4市 流出人口逾14万人</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243430.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13243466-GettyImages-1235228328-150x120.jpg" align ="left"></a>福建疫情持续延烧，全中国的疫情中高风险区集中在该省。目前，已知基因定序结果为Delta变异株。18日，漳州也因疫情蔓延，全市小区封闭管理。另据福建卫健委通报，此轮疫情爆发后，已经有超过14万人离开该省。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 9:04 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243447.md#1" target="_blank">【疫情9.18】白宫下周举办全球疫情峰会</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13243447.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13243465-GettyImages-1340552056-150x120.jpg" align ="left"></a>据约翰·霍普金斯大学的统计数据，截至美东夏令时周五（9月18日）下午4:40，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过2.27亿（227,655,835）例，死亡人数超过467万（4,679,220）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 6:17 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242980.md#1" target="_blank">分析：英美澳防务合作 美军可直捣中共要害</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13242980.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13243016-190218-O-NO801-002C-150x120.jpeg" align ="left"></a>美国、英国和澳大利亚本周宣布，签署新的三边安全伙伴关系，开展防务和高科技合作。许多分析人士认为，这是美国阻止中共在印太地区获得军事优势的重要基础。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 1:12 PM							</td></tr>
@@ -28,9 +29,6 @@
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240998.md#1" target="_blank">封中国卖家账号 亚马逊回应：反复滥用评论</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240998.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13163448-511712-150x120.jpg" align ="left"></a>9月17日，亚马逊全球副总裁、亚马逊全球开店亚太区执行总裁对媒体表示，在近期关注的封号事件中，亚马逊共封禁总计600个中国品牌的销售、约3000个卖家账号，这些账号均有多次反复滥用评论行为，亚马逊过去曾给出多次警告。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 6:57 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240248.md#1" target="_blank">【中国观察】北戴河会议后的政经风暴</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240248.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13228369-p8638621a666309283-600x400-150x120.jpeg" align ="left"></a>政治挂帅的红色舆论刚刚终结了百年党庆，宣称建成“小康社会”的北京当局，在北戴河会议后突然提出“共同富裕”的口号，一场关于钱的“斗争”在中国社会卷起了风暴。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 4:19 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240614.md#1" target="_blank">悼念六四 港人遭判刑 分析：中共最惧怕什么</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240614.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13238355-210915094549100311-150x120.jpg" align ="left"></a>近日，参加去年香港悼念六四集会的26名民主派人士中的12人，遭香港法院判刑。外界分析认为，中共故意重判这些人士，打压香港民主空间。而纪念六四已成为香港文化的组成部分。港人不会放弃为民主和自由的抗争，并为大陆人树立榜样，这正是中共最惧怕的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 4:11 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240246.md#1" target="_blank">韩朝各射导弹 两岸军事专家怎么看</a><br></h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/17/n13240246.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13236402-GettyImages-1235263795-150x120.jpg" align ="left"></a>就在中共外长访问韩国的当天（9月15日），朝鲜和韩国各自进行了导弹发射。朝鲜半岛的局势，在中韩朝三方各有谋划的角力下会走向何方？台海两岸的军事专家们有话说。
-台湾军事专家：小老弟也要闹独立?中共四面楚歌
-台湾国防安全研究院战略与资源所所长苏紫云告诉大纪元，看起来北京目前在外交战线上是陷入了困境。“因为朝鲜的目的有两个，一个是它想要走独立的外交路线，发射弹.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 12:55 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/21/9/18/n13244249.md#1" target="_blank">【横河观点】世界为何对中共移植黑幕沉默？</a><br></h3>医生披露为何世界对中共强摘器官视而不见，他们相信此事但不说，医学界的共同利益捆绑不仅在疫情和活摘，强摘器官谁最先曝光的？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月19日 8:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jtmmat3416/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/jtmmat3416/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
